[Add]  Aframe Frame work

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "aframe": "^0.8.2",
     "photo-sphere-viewer": "^3.4.1",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1"
